--- a/The Book - Web/templates/the_book/home.html
+++ b/The Book - Web/templates/the_book/home.html
@@ -73,19 +73,19 @@
         </div>
 
         <!-- Modals -->
-        <div id="teleport-modal" class="modal">
+        <div id="teleport-modal" class="modal custom-scrollbar">
             {% include 'the_book/modals/teleport_modal.html' %}
         </div>
 
-        <div id="character-sheet-modal" class="modal">
+        <div id="character-sheet-modal" class="modal custom-scrollbar">
             {% include 'the_book/modals/character_sheet_modal.html' %}
         </div>
 
-        <div id="inventory-modal" class="modal">
+        <div id="inventory-modal" class="modal custom-scrollbar">
             {% include 'the_book/modals/inventory_modal.html' %}
         </div>
 
-        <div id="quests-modal" class="modal">
+        <div id="quests-modal" class="modal custom-scrollbar">
             {% include 'the_book/modals/quests_modal.html' %}
         </div>
     </div>
