--- a/The Book - Web/templates/the_book/modals/character_sheet_modal.html
+++ b/The Book - Web/templates/the_book/modals/character_sheet_modal.html
@@ -1,4 +1,4 @@
-<div class="modal-content">
+<div class="modal-content custom-scrollbar">
     <h2>Character Sheet</h2>
     <div class="character-section">
         <img id="character-portrait" class="portrait-image" src="{{ url_for('static', filename='/images/book_icon.png') }}" alt="Character Portrait" />
