--- a/The Book - Web/templates/the_book/modals/quests_modal.html
+++ b/The Book - Web/templates/the_book/modals/quests_modal.html
@@ -1,4 +1,4 @@
-<div class="modal-content">
+<div class="modal-content custom-scrollbar">
     <h2>Quests</h2>
     <ul id="quest-list">
         <li>
