--- a/The Book - Web/templates/the_book/modals/teleport_modal.html
+++ b/The Book - Web/templates/the_book/modals/teleport_modal.html
@@ -1,4 +1,4 @@
-<div class="modal-content">
+<div class="modal-content custom-scrollbar">
     <h2>Teleportation</h2>
     <p>Select a location to teleport:</p>
     <select id="teleport-location">
