--- a/The Book - Web/static/style/the_book/modals.css
+++ b/The Book - Web/static/style/the_book/modals.css
@@ -11,14 +11,14 @@
 
 .modal-content {
     background-color: #333;
-    margin: 15% auto;
+    margin: 10% auto;
     padding: 20px;
     border: 1px solid #555;
     width: 50%;
-    max-height: 30%;
-    top: 50%;
+    max-height: 70%;
     color: #ddd;
     z-index: 999;
+    overflow-y: auto;
 }
 
 .modal-content h2 {
