--- a/The Book - Web/templates/the_book/modals/inventory_modal.html
+++ b/The Book - Web/templates/the_book/modals/inventory_modal.html
@@ -1,4 +1,4 @@
-<div class="modal-content">
+<div class="modal-content custom-scrollbar">
     <h2>Inventory</h2>
     <ul id="inventory-list">
         <li class="inventory-item">
