--- a/The Book - Web/static/style/the_book/main-content.css
+++ b/The Book - Web/static/style/the_book/main-content.css
@@ -203,8 +203,11 @@ scene-interactive-content contains two sections scene-text scene-input*/
 .suggestions {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
+    transform: translateY(-100%);
+    font-family: 'Courier', monospace;
+    background-color: #333;
+    border: 1px solid #555;
+    color: #ddd;
     z-index: 1000;
     max-height: 200px;
     overflow-y: auto;
@@ -216,7 +219,7 @@ scene-interactive-content contains two sections scene-text scene-input*/
 }
 
 .suggestion-item:hover {
-    background-color: #e9e9e9;
+    background-color: #222;
 }
 
 @keyframes fadeIn {
