--- a/The Book - Web/templates/main_frame.html
+++ b/The Book - Web/templates/main_frame.html
@@ -50,6 +50,7 @@
         <button class="toggle-button"><i class="fas fa-chevron-down"></i></button>
         <div class="footer-drawer">
             <ul>
+                <li><a href="/resume">Myself</a></li>
                 <li><a href="/contact">Contact</a></li>
                 <li><a href="https://www.buymeacoffee.com/myl1ne">Buy me a coffee</a></li>
             </ul>
