--- a/The Book - Web/templates/home/home.html
+++ b/The Book - Web/templates/home/home.html
@@ -10,7 +10,9 @@
 <main class="content-main">
     <h1>Welcome, Ghostless Shell</h1>
     <p>This place holds the results of my digital explorations.</p>
-    <p>Please, explore to your soul content. You may want to get lost in a book, or talk to the creatures who dwelve here.</p>
-    <p>Whatever you do, remember you are a guest in their territory. While you probe the theory of mind of those agents and cogs, do question your own.</p>
+    <p>Please, explore to your soul content. You may want to get lost in The Book, or talk to the creatures who dwelve here.</p>
+    <p>I use this website as a personal laboratory to host my tools and experiments, things may be broken or be work in progress.</p>
+    <br>
+    <p>The main public section is "The Book", which is an attempt at using large language models for MUD style game. Feel free to create an account and try.</p>
 </main>
 {% endblock %}
