Update resume + favicon

--- a/The Book - Web/templates/resume/home.html
+++ b/The Book - Web/templates/resume/home.html
@@ -117,11 +117,33 @@
   <section>
     <h3>Skills & Spells</h3>
     <ul>
+        <li>
+            <span class="skill-title"><i class="fas fa-code"></i> Machine Languages</span>
+            <ul class="skill-list">
+            <li>Python</li>
+            <li>C#</li>
+            <li>C++</li>
+            <li>PHP / Hack</li>
+            <li>JS</li>
+            <li>...touched many others</li>
+            </ul>
+        </li>
+        <li>
+            <span class="skill-title"><i class="fas fa-comments"></i> Human languages</span>
+            <ul class="skill-list">
+            <li>French</li>
+            <li>English</li>
+            <li>Spanish</li>
+            <li>German (notions)</li>
+            </ul>
+        </li>
       <li>
         <span class="skill-title"><i class="fas fa-brain"></i> ML/Data</span>
         <ul class="skill-list">
-          <li>Python</li>
           <li>PyTorch</li>
+          <li>SKLearn</li>
+          <li>Scikit</li>
+          <li>Numpy, Pandas</li>
           <li>Designed my first neural net in 2008</li>
         </ul>
       </li>
@@ -129,16 +151,15 @@
         <span class="skill-title"><i class="fas fa-gamepad"></i> 3D/Gaming</span>
         <ul class="skill-list">
           <li>Unity</li>
-          <li>C#</li>
           <li>Pixi.js</li>
         </ul>
       </li>
       <li>
         <span class="skill-title"><i class="fas fa-globe"></i> Web</span>
         <ul class="skill-list">
-          <li>PHP</li>
-          <li>JS</li>
           <li>Flask</li>
+          <li>Node.js</li>
+          <li>FastAPI</li>
         </ul>
       </li>
       <li>
@@ -174,15 +195,6 @@
         <ul class="skill-list">
           <li>Windows</li>
           <li>Linux</li>
-        </ul>
-      </li>
-      <li>
-        <span class="skill-title"><i class="fas fa-comments"></i> Human languages</span>
-        <ul class="skill-list">
-          <li>French</li>
-          <li>English</li>
-          <li>Spanish</li>
-          <li>German (notions)</li>
         </ul>
       </li>
     </ul>
