--- a/The Book - Web/static/style/resume/resume.css
+++ b/The Book - Web/static/style/resume/resume.css
@@ -1,6 +1,5 @@
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
     color: #333;
     line-height: 1.6;
 }
@@ -33,9 +32,9 @@ h3 {
 section {
     padding: 20px;
     margin-bottom: 20px;
-    background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: #333;
     color: white;
 }
 
