--- a/The Book - Web/templates/main_frame.html
+++ b/The Book - Web/templates/main_frame.html
@@ -32,9 +32,8 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/the_book">The Book</a></li>
-                    <button id="main-frame-btn-speak">Speak</button>
 
-                    <li class="admin-only hidden"><a href="/persona/cassandra/">Persona (Cassandra)</a></li>
+                    <li class="admin-only hidden"><a href="/persona/Myline/">Persona (Myline)</a></li>
                     <li class="admin-only hidden"><a href="/chat_gpteam">ChatGPTeam</a></li>
                     <ul>
                         <li>
