--- a/The Book - Web/static/style/persona/persona.css
+++ b/The Book - Web/static/style/persona/persona.css
@@ -3,18 +3,17 @@
     height: 100%;
     background-color: #000000;
     color: rgb(0, 255, 60);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
 #interaction-container {
-    width: 30%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     border: 1px solid #ccc;
     border-radius: 5px;
     display: grid;
-    grid-template-rows: 90% 10%;
+    grid-template-rows: 10% 80% 10%;
     /* 80% for persona-container window, 20% for message-form */
 }
 
@@ -138,4 +137,17 @@
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
     background-color: #666;
+}
+
+#relevant-memories-panel {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    overflow-y: scroll;
+    padding: 10px;
+    background-color: rgba(50, 50, 50, 0.5);
 }
