--- a/The Book - Web/templates/persona/home.html
+++ b/The Book - Web/templates/persona/home.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <form id="message-form">
-            <input type="text" id="message" name="message">
+            <input type="text" id="message-input" name="message-input" class="message-input">
             <div id="controller-buttons">
                 <button type="button" class="toggle-media-button" id="camera-toggle">
                     <i class="fas fa-video"></i>
